[package]
name = "raadef"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "3.2.8", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
lazy_static = "1.4.0"
paris = "1.5"
phf = { version = "0.11", features = ["macros"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
simplelog = { version = "0.12.0", features = ["paris"] }
strum = "0.24"
strum_macros = "0.24"
